// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText RichText and loom link in text flag return text with loom iframe 1`] = `
<div
  class="container markdown-content"
>
  <p>
    test1 
  </p>
  <div
    class="video-container"
  >
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="https://www.useloom.com/embed/undefined"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText RichText and youtube and loom link in text flag return text with youtube and loom iframe 1`] = `
<div
  class="container markdown-content"
>
  <p>
    test1 
  </p>
  <div
    class="video-container"
  >
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="https://www.useloom.com/embed/undefined"
      webkitallowfullscreen=""
    />
  </div>
   
  <div
    class="video-container"
  >
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="//www.youtube.com/embed/undefined"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText RichText and youtube in text flag return text with youtube iframe 1`] = `
<div
  class="container markdown-content"
>
  <p>
    test1 
  </p>
  <div
    class="video-container"
  >
    <iframe
      allowfullscreen=""
      class="video"
      frameborder="0"
      mozallowfullscreen=""
      src="//www.youtube.com/embed/undefined"
      webkitallowfullscreen=""
    />
  </div>
  <p />
  

</div>
`;

exports[`RichText renders correct html for mentions and links 1`] = `
<div
  class="container markdown-content"
>
  <p>
    Hello, 
    <span
      class="mention"
    >
      @Jyoti Puri
    </span>
    , look here: link: 
    <a
      href="http://pneumatic.app/"
      target="_blank"
    >
      http://pneumatic.app/
    </a>
  </p>
  

</div>
`;

exports[`RichText renders correct html for plain text 1`] = `
<div
  class="container markdown-content"
>
  <p>
    Some plain text
  </p>
  

</div>
`;
